--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dataset-explorer",
-  "version": "1.6.1",
+  "version": "2.0.0-BETA",
   "private": true,
   "homepage": ".",
   "dependencies": {
