--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
+    "@reduxjs/toolkit":"^2.2.7",
+    "react-redux": "^9.1.2",
     "typescript": "^5.3.3",
     "@types/react-table": "^7.7.19",
     "@types/react": "18.2.58",
