--- a/config-prod-eucaim.json
+++ b/config-prod-eucaim.json
@@ -3,7 +3,9 @@
     "release": "prod-eucaim",
     "datasetService": "https://eucaim-node.i3m.upv.es/dataset-service/api",
     "tracerService": "https://eucaim-node.i3m.upv.es/tracer-service/tracer/api/v1",
-    "caseExplorerService": "https://eucaim-node.i3m.upv.es/omni/",
+    "caseExplorerService": "https://qpdiscovery.eucaim-node.i3m.upv.es/",
+    "appsDashboard": "https://eucaim-node.i3m.upv.es/apps/",
+    "desktopAppAccess": "https://eucaim-node.i3m.upv.es/guacamole/",
     "basename": "/dataset-service",
     "defaultLimitDatasets": 30,
     "defaultLimitStudies": 30,
