--- a/config-prod.json
+++ b/config-prod.json
@@ -4,6 +4,8 @@
   "datasetService": "https://chaimeleon-eu.i3m.upv.es/dataset-service/api",
   "tracerService": "https://chaimeleon-eu.i3m.upv.es/tracer-service/tracer/api/v1",
   "caseExplorerService": "https://chaimeleon-eu.i3m.upv.es/omni/",
+  "appsDashboard": "https://chaimeleon-eu.i3m.upv.es/apps/",
+  "desktopAppAccess": "https://chaimeleon-eu.i3m.upv.es/guacamole/",
   "basename": "/dataset-service",
   "defaultLimitDatasets": 30,
   "defaultLimitStudies": 30,
