Eucaim privacy policy and term conditions fix chaimeleon-eu/dataset-explorer#198, fix asalic/dataset-explorer#170

--- a/config-prod-eucaim.json
+++ b/config-prod-eucaim.json
@@ -29,8 +29,8 @@
     "project": {
       "name": "EUCAIM",
       "doi": null,
-      "termsConditions": null,
-      "privacyPolicy": null,
+      "termsConditions": "https://dashboard.eucaim.cancerimage.eu/eucaim_usage_policy.pdf",
+      "privacyPolicy": "https://dashboard.eucaim.cancerimage.eu/privacy-policy",
       "favicon": "/eucaim-logo.jpg"
     }
   }
