--- a/config-prod-eucaim.json
+++ b/config-prod-eucaim.json
@@ -3,6 +3,7 @@
     "release": "prod-eucaim",
     "datasetService": "https://eucaim-node.i3m.upv.es/dataset-service/api",
     "tracerService": "https://eucaim-node.i3m.upv.es/tracer-service/tracer/api/v1",
+    "appsDashboard": "https://eucaim-node.i3m.upv.es/apps",
     "basename": "/dataset-service",
     "defaultLimitDatasets": 30,
     "defaultLimitStudies": 30,
