--- a/config-prod-eucaim.json
+++ b/config-prod-eucaim.json
@@ -1,7 +1,10 @@
 {
     "appVersion": "<replace_me>",
     "release": "prod-eucaim",
-    "datasetService": "https://eucaim-node.i3m.upv.es/dataset-service/api",
+    "datasetService": {
+      "api": "https://eucaim-node.i3m.upv.es/dataset-service/api",
+      "projectLogo": "https://eucaim-node.i3m.upv.es/dataset-service"
+    },
     "tracerService": "https://eucaim-node.i3m.upv.es/tracer-service/tracer/api/v1",
     "appsDashboard": "https://eucaim-node.i3m.upv.es/apps",
     "basename": "/dataset-service",
