--- a/config-prod.json
+++ b/config-prod.json
@@ -1,7 +1,10 @@
 {
   "appVersion": "<replace_me>",
   "release": "prod",
-  "datasetService": "https://chaimeleon-eu.i3m.upv.es/dataset-service/api",
+  "datasetService": {
+    "api": "https://chaimeleon-eu.i3m.upv.es/dataset-service/api",
+    "projectLogo": "https://chaimeleon-eu.i3m.upv.es/dataset-service"
+  },
   "tracerService": "https://chaimeleon-eu.i3m.upv.es/tracer-service/tracer/api/v1",
   "appsDashboard": "https://chaimeleon-eu.i3m.upv.es/apps",
   "basename": "/dataset-service",
