Change link support eucaim node to new Github repo fix chaimeleon-eu/dataset-explorer#249, fix asalic/dataset-explorer#214

--- a/config-prod-eucaim.json
+++ b/config-prod-eucaim.json
@@ -33,6 +33,9 @@
       "privacyPolicy": "https://dashboard.eucaim.cancerimage.eu/privacy-policy",
       "favicon": "/eucaim-logo.jpg"
     },
+    "externalLinks": {
+      "supportReportRequest": "https://github.com/EUCAIM/UPV-node/issues"
+    },
     "externalServices": [
       {
         "name": "App Dashboard",
